--- a/src/main/java/views/products/modular/ModularCuttingServiceView.form
+++ b/src/main/java/views/products/modular/ModularCuttingServiceView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="containerPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="784" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -44,7 +44,16 @@
             </constraints>
             <properties/>
             <border type="none" title="Metros de vinilo: "/>
-            <children/>
+            <children>
+              <component id="7dc4" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+            </children>
           </grid>
           <grid id="ed24c" binding="vinylMetersPriceContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
@@ -53,7 +62,16 @@
             </constraints>
             <properties/>
             <border type="none" title="Precio del metro de vinilo: "/>
-            <children/>
+            <children>
+              <component id="6b4ca" class="javax.swing.JTextField" binding="vinylCostTextField">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+            </children>
           </grid>
           <component id="15e12" class="javax.swing.JLabel" binding="vinylMetersMultiplyLabel">
             <constraints>
@@ -78,7 +96,16 @@
             </constraints>
             <properties/>
             <border type="none" title="Ganancia: "/>
-            <children/>
+            <children>
+              <component id="9017" class="javax.swing.JTextField" binding="profitTextField">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+            </children>
           </grid>
           <component id="dfbee" class="javax.swing.JLabel" binding="cuttingServiceFinalPriceEqualsLabel">
             <constraints>
@@ -95,7 +122,16 @@
             </constraints>
             <properties/>
             <border type="none" title="Precio final del servicio de corte: "/>
-            <children/>
+            <children>
+              <component id="43f7a" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+            </children>
           </grid>
         </children>
       </grid>
