--- a/src/main/java/views/products/modular/ModularSquareMeterPrintingView.form
+++ b/src/main/java/views/products/modular/ModularSquareMeterPrintingView.form
@@ -149,6 +149,7 @@
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <selected value="true"/>
                       <text value="UV"/>
                     </properties>
                   </component>
@@ -226,11 +227,9 @@
             <properties/>
             <border type="none" title="Valor del dólar: "/>
             <children>
-              <component id="45c50" class="javax.swing.JTextField" binding="dolarPriceTextField">
+              <component id="4664c" class="javax.swing.JComboBox" binding="dollarComboBox">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
               </component>
