--- a/src/main/java/views/products/modular/ModularCapView.form
+++ b/src/main/java/views/products/modular/ModularCapView.form
@@ -168,7 +168,7 @@
                 <properties/>
                 <border type="none" title="Costo final de impresión: "/>
                 <children>
-                  <component id="a9e4a" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+                  <component id="a9e4a" class="javax.swing.JTextField" binding="printingMetersFinalPriceTextField">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
