--- a/src/main/java/views/products/modular/ModularFlagView.form
+++ b/src/main/java/views/products/modular/ModularFlagView.form
@@ -128,7 +128,7 @@
                 <properties/>
                 <border type="none" title="Costo final de tela: "/>
                 <children>
-                  <component id="9f3fc" class="javax.swing.JTextField" binding="finalPriceTextField">
+                  <component id="9f3fc" class="javax.swing.JTextField" binding="clothFinalPriceTextField">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="50" height="-1"/>
@@ -315,7 +315,7 @@
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <text value="="/>
                 </properties>
               </component>
             </children>
