--- a/src/main/java/views/budget/BudgetCreateView.form
+++ b/src/main/java/views/budget/BudgetCreateView.form
@@ -260,7 +260,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="69a11" binding="measuresContainer" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="69a11" binding="measuresContainer" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -268,7 +268,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="37be4" class="javax.swing.JTextField" binding="measuresTextField">
+                  <component id="37be4" class="javax.swing.JTextField" binding="widthMeasureTextField">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -276,12 +276,28 @@
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="7e835" class="javax.swing.JLabel" binding="measuresLabel">
+                  <component id="7e835" class="javax.swing.JLabel" binding="widthMeasureLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Medidas:"/>
+                      <text value="Ancho (metros):"/>
+                    </properties>
+                  </component>
+                  <component id="5feb" class="javax.swing.JTextField" binding="heightMeasureTextField">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="c47df" class="javax.swing.JLabel" binding="heightMeasureLabel">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Alto (metros):"/>
                     </properties>
                   </component>
                 </children>
