--- a/src/main/java/views/products/modular/ModularClothesView.form
+++ b/src/main/java/views/products/modular/ModularClothesView.form
@@ -140,7 +140,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-            <border type="none" title="Precio del metro de impresión: "/>
+            <border type="none" title="Precio del metro de tela: "/>
             <children>
               <component id="381e4" class="javax.swing.JTextField" binding="clothMetersPriceTextField">
                 <constraints>
